Replacing Class#newInstance method usage in RPF (deprecated in JDK9)